# Course-graining-2D-Ising-Model-with-CNNs

Ising-Model-Coarse-Graining-with-CNNs-main/: README.md  data-gen.py  models.py  pyproject.toml  save_results.py  simulator.py  train_model.py
Ising-Model-Coarse-Graining-with-CNNs-main/data/: ising_data_16x16_1600configs.npz  metadata.pkl
Ising-Model-Coarse-Graining-with-CNNs-main/models/: best_cnn_model.pth  best_mlp_model.pth
Ising-Model-Coarse-Graining-with-CNNs-main/results/: REPORT.md  configuration.txt  detailed_results.pkl  metrics_summary.json  model_comparison.txt  training_history.csv
