[project]
name = "ising-coarse-grain"
version = "0.1.0"
description = "2D Ising Model Coarse-Graining project"
readme = "README.md"
requires-python = ">=3.8"

# Translated dependencies from requirements.txt
dependencies = [
  "numpy>=1.21.0",
  "matplotlib>=3.5.0",
  "torch>=1.12.0",
  "torchvision>=0.13.0",
  "scikit-learn>=1.1.0",
  "numba>=0.56.0",
  "pickle-mixin>=1.0.2",
  "tqdm>=4.64.0",
  "seaborn>=0.11.0",
  "pandas>=1.4.0",
]